--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -6,10 +6,10 @@ on:
     branches:
       - master
 
-# Định nghĩa các jobs cần thực hiện 
+# Định nghĩa các jobs cần thực hiện
 jobs:
-   # Job 1: build và test
-   # Job thực thi trên máy ảo ubuntu
+  # Job 1: build và test
+  # Job thực thi trên máy ảo ubuntu
   build_and_test:
     runs-on: ubuntu-latest
 
@@ -18,7 +18,8 @@ jobs:
         # Sử dụng action "checkout" để sao copy code từ repository vào máy ảo Ubuntu
         uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
+      - name:
+          Login to Docker Hub
           # Sử dụng action "docker/login-action" để đăng nhập vào Docker Hub
         uses: docker/login-action@v2
         with:
@@ -26,7 +27,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and test
-        # Build và test image được build ra bằng Docker 
+        # Build và test image được build ra bằng Docker
         run: |
           docker build -t nestjs-test .
           docker run nestjs-test npm test
@@ -38,3 +39,20 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/nestjs-test:${{ github.sha }}
+  # Job 2: Deploy
+  deploy:
+    needs: build_and_test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Deploy to server
+        run: |
+          # Pull image mà được push lên DockerHub bên trên
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/nestjs-test:${{ github.sha }}
+
+          # Dừng và gỡ bỏ container hiện tại (nếu có)
+          docker stop nestjs-test-container
+          docker rm nestjs-test-container 
+
+          # Chạy container mới với image đã pull về bên trên
+          docker run -d -p 80:3000 --name nestjs-test-container ${{ secrets.DOCKERHUB_USERNAME }}/nestjs-test:${{ github.sha }}
